Fix background color of "Advanced Settings" in editor on iOS and expand click area

--- a/components/src/components/editable-metadata/editable-metadata.scss
+++ b/components/src/components/editable-metadata/editable-metadata.scss
@@ -39,3 +39,8 @@
   opacity: 1;
   transition: 0.125s;
 }
+
+ion-card-header.advanced {
+  display: flex;
+  flex-direction: row;
+}
